@@ -20,11 +20,15 @@ import io.grpc.stub.StreamObserver;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeoutException;
+import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.SneakyThrows;
 import org.assertj.core.api.InstanceOfAssertFactories;
@@ -36,8 +40,6 @@ import org.hiero.block.api.protoc.ServerStatusResponse;
 import org.hiero.block.api.protoc.SubscribeStreamRequest;
 import org.hiero.block.api.protoc.SubscribeStreamResponse;
 import org.hiero.mirror.common.domain.transaction.BlockFile;
-import org.hiero.mirror.importer.ImporterProperties;
-import org.hiero.mirror.importer.downloader.CommonDownloaderProperties;
 import org.hiero.mirror.importer.exception.BlockStreamException;
 import org.hiero.mirror.importer.reader.block.BlockStream;
 import org.junit.jupiter.api.AfterEach;
@@ -52,12 +54,11 @@ import org.mockito.Mockito;
 @ExtendWith(GrpcCleanupExtension.class)
 final class BlockNodeTest extends BlockNodeTestBase {
 
-    private static final Consumer<BlockStream> IGNORE = b -> {};
+    private static final BiFunction<BlockStream, String, Boolean> IGNORE = (b, n) -> false;
     private static final Consumer<BlockingClientCall<?, ?>> NOOP_GRPC_BUFFER_DISPOSER = grpcCall -> {};
     private static final String SERVER = "test1";
     private static final Duration TIMEOUT = Duration.ofSeconds(5);
 
-    private CommonDownloaderProperties commonDownloaderProperties;
     private BlockNodeProperties blockNodeProperties;
     private BlockNode node;
     private StreamProperties streamProperties;
@@ -70,18 +71,15 @@ final class BlockNodeTest extends BlockNodeTestBase {
 
     @BeforeEach
     void setup() {
-        commonDownloaderProperties = new CommonDownloaderProperties(new ImporterProperties());
-        commonDownloaderProperties.init();
-        commonDownloaderProperties.setTimeout(TIMEOUT);
         blockNodeProperties = new BlockNodeProperties();
         blockNodeProperties.setHost(SERVER);
         streamProperties = new StreamProperties();
         node = new BlockNode(
                 InProcessManagedChannelBuilderProvider.INSTANCE,
                 NOOP_GRPC_BUFFER_DISPOSER,
+                meterRegistry,
                 blockNodeProperties,
-                streamProperties,
-                meterRegistry);
+                streamProperties);
     }
 
     @AfterEach
@@ -91,32 +89,48 @@ final class BlockNodeTest extends BlockNodeTestBase {
 
     @Test
     void compareTo() {
+        // given
         var first = new BlockNode(
                 InProcessManagedChannelBuilderProvider.INSTANCE,
                 NOOP_GRPC_BUFFER_DISPOSER,
+                meterRegistry,
                 blockNodeProperties("localhost", 100, 0),
-                streamProperties,
-                meterRegistry);
+                streamProperties);
         var second = new BlockNode(
                 InProcessManagedChannelBuilderProvider.INSTANCE,
                 NOOP_GRPC_BUFFER_DISPOSER,
+                meterRegistry,
                 blockNodeProperties("localhost", 101, 0),
-                streamProperties,
-                meterRegistry);
+                streamProperties);
         var third = new BlockNode(
                 InProcessManagedChannelBuilderProvider.INSTANCE,
                 NOOP_GRPC_BUFFER_DISPOSER,
+                meterRegistry,
                 blockNodeProperties("peer", 99, 0),
-                streamProperties,
-                meterRegistry);
+                streamProperties);
         var forth = new BlockNode(
                 InProcessManagedChannelBuilderProvider.INSTANCE,
                 NOOP_GRPC_BUFFER_DISPOSER,
+                meterRegistry,
                 blockNodeProperties("localhost", 50, 1),
-                streamProperties,
-                meterRegistry);
-        var all = Stream.of(forth, third, second, first).sorted().toList();
+                streamProperties);
+
+        // when
+        var all = Stream.of(forth, third, second, first).sorted().collect(Collectors.toList());
+
+        // then
         assertThat(all).containsExactly(first, second, third, forth);
+
+        // when latency changes and sorts again. Note it needs at least 5 latency recorded for an update
+        for (int i = 0; i < 5; i++) {
+            third.recordLatency(1);
+            second.recordLatency(2);
+            first.recordLatency(5);
+        }
+        Collections.sort(all);
+
+        // then
+        assertThat(all).containsExactly(third, second, first, forth);
     }
 
     @Test
@@ -178,9 +192,9 @@ final class BlockNodeTest extends BlockNodeTestBase {
 
         // when fails twice in a row, the node should still be active
         for (int i = 0; i < 2; i++) {
-            assertThatThrownBy(() -> node.streamBlocks(0, commonDownloaderProperties, IGNORE))
+            assertThatThrownBy(() -> node.streamBlocks(0, null, IGNORE, TIMEOUT))
                     .isInstanceOf(BlockStreamException.class)
-                    .hasMessageContaining("Received status NOT_AVAILABLE from block node");
+                    .hasMessageContaining("Received status NOT_AVAILABLE from " + node);
             assertThat(node.isActive()).isTrue();
         }
 
@@ -189,7 +203,7 @@ final class BlockNodeTest extends BlockNodeTestBase {
         server = runBlockStreamSubscribeService(
                 resources,
                 ResponsesOrError.fromResponse(subscribeStreamResponse(SubscribeStreamResponse.Code.SUCCESS)));
-        node.streamBlocks(0, commonDownloaderProperties, IGNORE);
+        node.streamBlocks(0, null, IGNORE, TIMEOUT);
         assertThat(node.isActive()).isTrue();
 
         // when fails three times in a row
@@ -198,9 +212,9 @@ final class BlockNodeTest extends BlockNodeTestBase {
                 resources,
                 ResponsesOrError.fromResponse(subscribeStreamResponse(SubscribeStreamResponse.Code.NOT_AVAILABLE)));
         for (int i = 0; i < 3; i++) {
-            assertThatThrownBy(() -> node.streamBlocks(0, commonDownloaderProperties, IGNORE))
+            assertThatThrownBy(() -> node.streamBlocks(0, null, IGNORE, TIMEOUT))
                     .isInstanceOf(BlockStreamException.class)
-                    .hasMessageContaining("Received status NOT_AVAILABLE from block node");
+                    .hasMessageContaining("Received status NOT_AVAILABLE from " + node);
             boolean expected = i < 2;
             assertThat(node.isActive()).isEqualTo(expected);
         }
@@ -220,7 +234,7 @@ final class BlockNodeTest extends BlockNodeTestBase {
 
         // when
         var streamed = new ArrayList<BlockStream>();
-        node.streamBlocks(0, commonDownloaderProperties, streamed::add);
+        node.streamBlocks(0, null, accumulate(streamed), TIMEOUT);
 
         // then
         assertThat(streamed)
@@ -237,9 +251,9 @@ final class BlockNodeTest extends BlockNodeTestBase {
         runBlockStreamSubscribeService(resources, ResponsesOrError.fromResponses(responses));
 
         // when, then
-        assertThatThrownBy(() -> node.streamBlocks(0, commonDownloaderProperties, IGNORE))
+        assertThatThrownBy(() -> node.streamBlocks(0, null, IGNORE, TIMEOUT))
                 .isInstanceOf(BlockStreamException.class)
-                .hasMessage("Received status NOT_AVAILABLE from block node");
+                .hasMessage("Received status NOT_AVAILABLE from " + node);
     }
 
     @Test
@@ -249,7 +263,7 @@ final class BlockNodeTest extends BlockNodeTestBase {
         runBlockStreamSubscribeService(resources, ResponsesOrError.fromResponses(responses));
 
         // when, then
-        assertThatThrownBy(() -> node.streamBlocks(0, commonDownloaderProperties, IGNORE))
+        assertThatThrownBy(() -> node.streamBlocks(0, null, IGNORE, TIMEOUT))
                 .isInstanceOf(BlockStreamException.class)
                 .hasMessage("Incorrect first block item case EVENT_HEADER");
     }
@@ -264,7 +278,7 @@ final class BlockNodeTest extends BlockNodeTestBase {
         runBlockStreamSubscribeService(resources, ResponsesOrError.fromResponses(responses));
 
         // when, then
-        assertThatThrownBy(() -> node.streamBlocks(0, commonDownloaderProperties, IGNORE))
+        assertThatThrownBy(() -> node.streamBlocks(0, null, IGNORE, TIMEOUT))
                 .isInstanceOf(BlockStreamException.class)
                 .hasMessage("Received block items of a new block while the previous block is still pending");
     }
@@ -276,7 +290,7 @@ final class BlockNodeTest extends BlockNodeTestBase {
         runBlockStreamSubscribeService(resources, ResponsesOrError.fromResponses(responses));
 
         // when, then
-        assertThatThrownBy(() -> node.streamBlocks(0, commonDownloaderProperties, IGNORE))
+        assertThatThrownBy(() -> node.streamBlocks(0, null, IGNORE, TIMEOUT))
                 .isInstanceOf(BlockStreamException.class)
                 .hasMessage("The first block item is record file and there are more than one block items");
     }
@@ -287,7 +301,7 @@ final class BlockNodeTest extends BlockNodeTestBase {
         runBlockStreamSubscribeService(resources, ResponsesOrError.fromError(new RuntimeException("oops")));
 
         // when, then
-        assertThatThrownBy(() -> node.streamBlocks(0, commonDownloaderProperties, IGNORE))
+        assertThatThrownBy(() -> node.streamBlocks(0, null, IGNORE, TIMEOUT))
                 .isInstanceOf(BlockStreamException.class)
                 .hasCauseInstanceOf(StatusException.class);
     }
@@ -305,7 +319,7 @@ final class BlockNodeTest extends BlockNodeTestBase {
 
         // when, then
         var streamed = new ArrayList<BlockStream>();
-        node.streamBlocks(0, commonDownloaderProperties, streamed::add);
+        node.streamBlocks(0, null, accumulate(streamed), TIMEOUT);
 
         // then
         assertThat(streamed)
@@ -330,8 +344,7 @@ final class BlockNodeTest extends BlockNodeTestBase {
         });
 
         // when, then
-        commonDownloaderProperties.setTimeout(Duration.ofMillis(100));
-        assertThatThrownBy(() -> node.streamBlocks(0, commonDownloaderProperties, IGNORE))
+        assertThatThrownBy(() -> node.streamBlocks(0, null, IGNORE, Duration.ofMillis(100)))
                 .isInstanceOf(BlockStreamException.class)
                 .hasCauseInstanceOf(TimeoutException.class);
         latch.countDown();
@@ -347,7 +360,7 @@ final class BlockNodeTest extends BlockNodeTestBase {
         runBlockStreamSubscribeService(resources, ResponsesOrError.fromResponses(responses));
 
         // when, then
-        assertThatThrownBy(() -> node.streamBlocks(0, commonDownloaderProperties, IGNORE))
+        assertThatThrownBy(() -> node.streamBlocks(0, null, IGNORE, TIMEOUT))
                 .isInstanceOf(BlockStreamException.class)
                 .hasMessage("Too many block items in a pending block: received 4, limit 2");
     }
@@ -355,11 +368,6 @@ final class BlockNodeTest extends BlockNodeTestBase {
     @Test
     void stringify() {
         var expected = String.format("BlockNode(%s)", blockNodeProperties.getStatusEndpoint());
-        assertThat(node.toString()).isEqualTo(expected);
-
-        blockNodeProperties.setHost("localhost");
-        blockNodeProperties.setStatusPort(50000);
-        expected = "BlockNode(localhost:50000)";
         assertThat(node.toString()).isEqualTo(expected);
     }
 
@@ -373,7 +381,7 @@ final class BlockNodeTest extends BlockNodeTestBase {
         properties.setStreamingPort(40841);
 
         // when
-        var blockNode = new BlockNode(provider, NOOP_GRPC_BUFFER_DISPOSER, properties, streamProperties, meterRegistry);
+        var blockNode = new BlockNode(provider, NOOP_GRPC_BUFFER_DISPOSER, meterRegistry, properties, streamProperties);
 
         // then
         Mockito.verify(provider, Mockito.times(1)).get(SERVER, 40840);
@@ -391,7 +399,7 @@ final class BlockNodeTest extends BlockNodeTestBase {
         properties.setStreamingPort(40840);
 
         // when
-        var blockNode = new BlockNode(provider, NOOP_GRPC_BUFFER_DISPOSER, properties, streamProperties, meterRegistry);
+        var blockNode = new BlockNode(provider, NOOP_GRPC_BUFFER_DISPOSER, meterRegistry, properties, streamProperties);
 
         // then
         Mockito.verify(provider, Mockito.times(1)).get(SERVER, 40840);
@@ -408,9 +416,9 @@ final class BlockNodeTest extends BlockNodeTestBase {
 
         // when
         for (int i = 0; i < 3; i++) {
-            assertThatThrownBy(() -> node.streamBlocks(0, commonDownloaderProperties, IGNORE))
+            assertThatThrownBy(() -> node.streamBlocks(0, null, IGNORE, TIMEOUT))
                     .isInstanceOf(BlockStreamException.class)
-                    .hasMessageContaining("Received status NOT_AVAILABLE from block node");
+                    .hasMessageContaining("Received status NOT_AVAILABLE from " + node);
         }
 
         // then
@@ -419,9 +427,9 @@ final class BlockNodeTest extends BlockNodeTestBase {
 
         // when become inactive again
         for (int i = 0; i < 3; i++) {
-            assertThatThrownBy(() -> node.streamBlocks(0, commonDownloaderProperties, IGNORE))
+            assertThatThrownBy(() -> node.streamBlocks(0, null, IGNORE, TIMEOUT))
                     .isInstanceOf(BlockStreamException.class)
-                    .hasMessageContaining("Received status NOT_AVAILABLE from block node");
+                    .hasMessageContaining("Received status NOT_AVAILABLE from " + node);
         }
 
         // and readmit delay elapsed
@@ -446,7 +454,7 @@ final class BlockNodeTest extends BlockNodeTestBase {
         runBlockStreamSubscribeService(resources, ResponsesOrError.fromResponses(responses));
 
         // when
-        node.streamBlocks(0, commonDownloaderProperties, IGNORE);
+        node.streamBlocks(0, null, IGNORE, TIMEOUT);
 
         // then
         assertThat(meterRegistry.find(ERROR_METRIC_NAME).counter().count()).isEqualTo(0);
@@ -459,11 +467,16 @@ final class BlockNodeTest extends BlockNodeTestBase {
         runBlockStreamSubscribeService(resources, ResponsesOrError.fromResponses(responses));
 
         // when, then
-        assertThatThrownBy(() -> node.streamBlocks(0, commonDownloaderProperties, IGNORE))
-                .isInstanceOf(BlockStreamException.class);
-        assertThatThrownBy(() -> node.streamBlocks(0, commonDownloaderProperties, IGNORE))
-                .isInstanceOf(BlockStreamException.class);
+        assertThatThrownBy(() -> node.streamBlocks(0, null, IGNORE, TIMEOUT)).isInstanceOf(BlockStreamException.class);
+        assertThatThrownBy(() -> node.streamBlocks(0, null, IGNORE, TIMEOUT)).isInstanceOf(BlockStreamException.class);
         assertThat(meterRegistry.find(ERROR_METRIC_NAME).counter().count()).isEqualTo(2);
+    }
+
+    private BiFunction<BlockStream, String, Boolean> accumulate(Collection<BlockStream> collection) {
+        return (blockStream, blockNode) -> {
+            collection.add(blockStream);
+            return false;
+        };
     }
 
     private void assertRecordItem(BlockStream blockStream) {
@@ -473,15 +486,6 @@ final class BlockNodeTest extends BlockNodeTestBase {
                 .hasSize(1)
                 .first()
                 .returns(BlockItem.ItemCase.RECORD_FILE, BlockItem::getItemCase);
-    }
-
-    private BlockNodeProperties blockNodeProperties(String host, int port, int priority) {
-        var properties = new BlockNodeProperties();
-        properties.setHost(host);
-        properties.setStatusPort(port);
-        properties.setStreamingPort(port);
-        properties.setPriority(priority);
-        return properties;
     }
 
     private void assertBlockStream(BlockStream blockStream, long number) {
@@ -501,6 +505,15 @@ final class BlockNodeTest extends BlockNodeTestBase {
                 .satisfies(b -> assertThat(b.loadStart())
                         .isGreaterThan(Instant.now().minusSeconds(10).toEpochMilli()))
                 .returns(-1L, BlockStream::nodeId);
+    }
+
+    private BlockNodeProperties blockNodeProperties(String host, int port, int priority) {
+        var properties = new BlockNodeProperties();
+        properties.setHost(host);
+        properties.setPriority(priority);
+        properties.setStatusPort(port);
+        properties.setStreamingPort(port);
+        return properties;
     }
 
     private void runBlockNodeService(Resources resources, Supplier<ServerStatusResponse> responseProvider) {
